<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    tools:context=".Mapas.EditaMarker">


    <ImageView
        android:id="@+id/Imagem"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:src="@tools:sample/backgrounds/scenic" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/Titulo_Incidente"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Imagem"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="72dp"
        android:breakStrategy="balanced"
        android:fitsSystemWindows="true"
        android:gravity="top"
        android:hint="@string/descricao_incidente"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/BtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E40404"
        android:onClick="deleteMarker"
        android:text="@string/btn_elimina_incidente"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/BtnEditIncidente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/BtnDelete"
        android:backgroundTint="#0246F4"
        android:text="@string/btn_edita_incidente"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        app:layout_constraintVertical_bias="0.506" />


</androidx.constraintlayout.widget.ConstraintLayout>